# TrimString_internship

./: .gitignore  CMakeLists.txt  README.md
src/: Trim.cpp  Trim.h  main.cpp  trim_string.cpp  trim_string.h
test/: hello_test.cpp  string_trim_test.cpp
